kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kgx-storage
  labels:
    app: kgx-storage
