kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kgx-storage
  namespace: kgx-storage
  labels:
    app: kgx-storage
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: kgx-storage
  sessionAffinity: None
